# reddit-tiktok-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEXT_STEPS.md  README.md  normalization_test.srt  pyproject.toml  pytest.ini  requirements.txt  start_web.py  test_perfect_sync.py  whispers2t_test.srt  youtube_urls.txt
.claude/: settings.local.json
docs/: SYNC_STRATEGY.md  TTS_STRATEGY.md  VIDEO_DOWNLOAD_GUIDE.md  VIDEO_PREVIEW_GUIDE.md  YOUTUBE_EXAMPLES.md  YOUTUBE_GAMING_GUIDE.md
docs/guide/: Complete Claude Code Instructions.md  Complete Development Specification.md  Complete Technical and Business Guide.md  Visual Design.md  WhisperX_NumPy.md  comprehensive playbook.md  guide to viral content, audience growth.md  research_session_1.md  research_session_2.md
src/: __init__.py  cli.py  main.py  web_app.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  app.py
src/generators/: __init__.py  background_library.py  background_video_library.py  edge_tts_timing_provider.py  fast_whisper_analyzer.py  hybrid_tts.py  tts_engine.py  video_downloader.py  video_generator.py  whisper_analyzer.py  whispers2t_analyzer.py  whisperx_aligner.py  youtube_helper.py
src/generators/providers/: __init__.py  coqui_provider.py  edge_tts_provider.py  gtts_provider.py  pyttsx3_provider.py
src/processors/: __init__.py  content_processor.py  quality_scorer.py  reddit_formatter.py  text_normalizer.py
src/utils/: __init__.py  logger.py
tests/: __init__.py
tests/unit/: test_content_processor.py  test_hybrid_tts.py  test_quality_scorer.py
